# linkedin-scraping

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
.semaphore/: semaphore.yml
linkedin-scraping/: cli.py
linkedin-scraping/scraper/: employee_scraper.py  scraper.py  scraper_pipeline.py
linkedin-scraping/scraper/output_sanitation/: sanitizers.py
linkedin-scraping/scraper/search_engines/: engines.py
linkedin_scraping/: cli.py
linkedin_scraping/scraper/: employee_scraper.py  scraper_pipeline.py
linkedin_scraping/scraper/output_sanitation/: sanitizers.py
linkedin_scraping/scraper/search_engines/: engines.py
tests/: test_linkedin-scraping.py
