[tool.poetry]
name = "linkedin-scraping"
version = "0.1.0"
description = ""
authors = ["Jochen Parmentier <jochen.parmentier@external.atlascopco.com>"]
packages = [
    { include="linkedin-scraping", from="." },
]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.5.2"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
tox = "^3.20.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
