[tool.poetry]
name = "linkedin_scraping"
version = "0.1.0"
description = ""
authors = ["Jochen Parmentier <jochen.parmentier@external.atlascopco.com>"]
packages = [
    { include="linkedin_scraping", from="." },
]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.5.2"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"
fire = "^0.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "pip", path = "dev-requirements.txt"}